fix handlers. add swagger info
